<resources>
    <string name="app_name">MealPlanner</string>

    <string name="uniuqeid">Contact No. or Email id</string>
    <string name="password">Enter Your Password</string>
    <string name="login">Login</string>

    <string name="mailcontact">Contact No. or E-mail Adrees</string>

    <string name="fname">Enter Your name</string>
    <string name="lname">Enter Your Last name</string>
    <string name="email">Enter Your Email id</string>
    <string name="phone">Enter Your Phone Number</string>
    <string name="repass">Re-Enter Your Password</string>
    <string name="forpass">Forget Password</string>
    <string name="logtosignin">Did not have any Account!! Sign-in</string>

    <string name="prefLoginState">loginstate</string>

    <string name="signtologintxt">Already have an Account?? Login</string>
    <string name="forgetpass">Forget Password?? reset it.</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="homepageprofile">Hey, <b>Sahil</b></string>
    <string name="hungry"><b>Hungry Today?</b></string>

    <string name="poha_ingridiants">1.5 cups poha 114 grams, use thick poha
1/4 teaspoon turmeric
1/2 teaspoon + 1/8 teaspoon salt divided, adjust to taste
1/3 cup green peas I used frozen, soaked in warm water for 10 minutes
2 teaspoons oil 10 ml, I used avocado oil
1/2 teaspoon mustard seeds
1.5 tablespoons raw peanuts
1 small red onion chopped
1 green chili chopped
10-12 curry leaves
1/4 teaspoon sugar optional
1 tablespoon chopped cilantro + more to garnish
1/2 lemon juice of
sev to garnish</string>

    <string name="description">
        To a strainer, add flattened rice (poha). Rinse it under running water until it turns soft. To check if its done, press a flake between your thumb and index finger, it should break easily.
Add turmeric and 1/2 teaspoon salt to the poha and toss to combine. Set it aside while you make the tempering in the pan.
Heat oil in a pan on medium heat. Once the oil is hot, add the mustard seeds and let them pop.
Then add the peanuts and saute for a minute or two until they start turning brown.
Then add the chopped onion, green chili and curry leaves. Cook for 2 minutes until the onions soften.
Add the green peas (which had been soaked in warm water for 10 minutes prior) and mix. Cook for 2 minutes until raw smell of peas goes away.
Then add in the rinsed poha and toss to combine. Taste test some poha and if it feels dry, sprinkle little water all over (I usually do that). Cook for 1-2 minutes.  Also tastes test and add more salt as needed at this point (I added around 1/8 teaspoon).
Also add the sugar (if using) and cilantro.And then cover the pan with a lid and turn heat to low. Let it be like that for 2 minutes. Then turn off the heat.
Squeeze in some fresh lemon juice. Garnish poha with more cilantro and sev and serve with a  chai
    </string>

    <string name="clubsandwitch_ingridiants">for paneer mixture:
▢2 tsp oil
▢½ onion (finely chopped)
▢1 carrot (finely chopped)
▢½ capsicum (finely chopped)
▢3 tbsp sweet corn
▢¾ cup paneer / cottage cheese (grated)
▢½ tsp pepper powder
▢½ tsp salt
▢½ tsp mixed herbs
▢2 tbsp tomato sauce
for sandwich
▢3 slices bread (white or brown)
▢butter (for toasting)
▢2 tsp green chutney
▢1 aloo / potato (boiled)
▢1 tomato (slice)
▢1 onion (slice)
▢pepper powder (for sprinkling)
▢salt (for sprinkling)
▢mixed herbs (for sprinkling)
▢1 slice cheese
▢1 tsp tomato sauce</string>
    <string name="clubsanddescription">
    firstly, in a pan heat 2 tsp oil and add ½ onion, 1 carrot, ½ capsicum and 3 tbsp sweet corn.
saute for 2 minutes without overcooking vegetables.
now add ¾ cup paneer, ½ tsp pepper powder, ½ tsp salt and ½ tsp mixed herbs.
mix well making sure everything is well combined.
further, add 2 tbsp tomato sauce and mix well.
paneer mixture is ready, keep aside.
spread butter to bread and toast to a golden brown.
toast the bread on both sides.
on one slice of bread, spread 1 tsp green chutney.
spread 2 tbsp of prepared paneer mixture.
place another slice of bread and spread 1 tsp green chutney.
top with boiled potato slices, tomato slices and onion slices.
further sprinkle pepper powder, salt, and mixed herbs.
place a slice of cheese and spread 1 tsp tomato sauce.cover with toasted bread and press gently.
prick with a toothpick making sure all the layers are intact.
cut into 4 pieces or shape of your choice.
finally, enjoy club sandwich with chips.
</string>

</resources>